I add deleteteClient function to delete clients to list

--- a/screens/list_client.html
+++ b/screens/list_client.html
@@ -68,6 +68,7 @@
         </article>
       </div>
     </main>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script> <!--Permite llamar a mensajes de alerta modificados-->
     <script type="module" src="../controllers/client_controller.js"></script>
   </body>
 </html>
